--- a/continuação flashcard/continuação flashcard/index.html
+++ b/continuação flashcard/continuação flashcard/index.html
@@ -11,37 +11,17 @@
         <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Mundo POP</h3>
                     <div class="cartao__conteudo__pergunta">
-                       <p> O que é JavaScript?</p>
+                       <p> Qual a melhor cantora do mundo?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de programação</p>
+                        <p>Beyoncé Giselle Knowles-Carter</p>
                     </div>
                 </div>
             </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       <p> O que é CSS?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                       <p> O CSS é uma linguagem de estilização</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       <p> O que é CSS?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                       <p> O CSS é uma linguagem de estilização</p>
-                    </div>
-                </div>
-            </article>
+          
+           
         </section>
     </main>
     <footer>
