--- a/continuação flashcard/continuação flashcard/index.html
+++ b/continuação flashcard/continuação flashcard/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+           <!--<article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Mundo POP</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -19,13 +19,14 @@
                         <p>Beyoncé Giselle Knowles-Carter</p>
                     </div>
                 </div>
-            </article>
+            </article>-->
           
-           
         </section>
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
+    <script src="beyoncé.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
